# dataform-autoremediation-claude-plugin

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  plugin.json  pyproject.toml
.claude-plugin/: plugin.json
agents/: plugin-validator.md
docs/: specifications.md
docs/adr/: 0002-session-start-hook-single-instance.md  0004-fetch-dataform-workflow-actions.md  0005-use-git-worktree-for-fixes.md  0006-use-git-clone-for-fixes.md  0007-zero-dependency-log-parsing.md  0008-modularize-scout-daemon.md  0009-oop-ioc-architecture.md  001-plugin-architecture.md  0010-use-gh-cli-for-cloning.md  003-log-scope-configuration.md  005-use-git-worktree-for-fixes.md  011-session-end-hook.md  012-configurable-workspace-root.md  013-1-to-n-plugin-lifecycle-pid-liveness.md  014-live-test-validation.md  template.md
hooks/: hooks.json
plans/: configuration_ideas.md
skills/fix-dataform/: SKILL.md
skills/scout-configure/: SKILL.md
src/: __init__.py  claude_invoker.py  constants.py  error_classification.py  exceptions.py  gcp_api.py  git_ops.py  live_test.py  models.py  notifications.py  scout_daemon.py
src/hooks/: session-end.sh  session-start.sh
src/skills/: fix_dataform.md  scout_configure.md
tests/: test_error_classification.py  test_gcp_api.py  test_git_ops.py  test_models.py  test_scout_daemon.py
