[project]
name = "dataform-scout"
version = "0.7.0"
description = "Dataform Scout Daemon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "pylint>=4.0.6",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.2.2",
    "ruff>=0.4.8",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "SIM",# flake8-simplify
    "N",  # pep8-naming
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.pylint.master]
ignore = ["tests"]

[tool.pylint."messages control"]
disable = [
    "W1203", # logging-fstring-interpolation
    "W1510", # subprocess-run-check
    "W1514", # unspecified-encoding
    "W0621", # redefined-outer-name (pytest fixtures)
    "R1705", # no-else-return
    "C0301", # line-too-long (handled by ruff)
    "W0603", # global-statement
    "C0103", # invalid-name
    "W0613", # unused-argument
    "R0913", # too-many-arguments
    "R0917", # too-many-positional-arguments
    "R0914", # too-many-locals
    "W0602", # global-variable-not-assigned
    "W0718", # broad-exception-caught
    "R1732", # consider-using-with
    "R0911", # too-many-return-statements
    "W0107", # unnecessary-pass
]
